// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`telepath: wagtail.widgets.CheckboxInput it renders correctly 1`] = `"<input type=\\"checkbox\\" name=\\"sugar\\" id=\\"id-sugar\\" checked=\\"checked\\">"`;

exports[`telepath: wagtail.widgets.PageChooser it renders correctly 1`] = `
"<div id=\\"the-id-chooser\\" class=\\"chooser page-chooser\\" data-chooser-url=\\"/admin/choose-page/\\">
          <div class=\\"chosen\\">
            <span class=\\"title\\">Welcome to the Wagtail Bakery!</span>
            <ul class=\\"actions\\">
              <li>
                <button type=\\"button\\" class=\\"button action-choose button-small button-secondary\\">
                  Choose another page
                </button>
              </li>
              <li>
                <a href=\\"/admin/pages/60/edit/\\" class=\\"edit-link button button-small button-secondary\\" target=\\"_blank\\" rel=\\"noreferrer\\">
                  Edit this page
                </a>
              </li>
            </ul>
          </div>
          <div class=\\"unchosen\\">
            <button type=\\"button\\" class=\\"button action-choose button-small button-secondary\\">
              Choose a page
            </button>
          </div>
        </div>
        <input type=\\"hidden\\" name=\\"the-name\\" id=\\"the-id\\" value=\\"60\\">"
`;

exports[`telepath: wagtail.widgets.PageChooser setState() changes the current page 1`] = `
"<div id=\\"the-id-chooser\\" class=\\"chooser page-chooser\\" data-chooser-url=\\"/admin/choose-page/\\">
          <div class=\\"chosen\\">
            <span class=\\"title\\">Anadama</span>
            <ul class=\\"actions\\">
              <li>
                <button type=\\"button\\" class=\\"button action-choose button-small button-secondary\\">
                  Choose another page
                </button>
              </li>
              <li>
                <a href=\\"/admin/pages/34/edit/\\" class=\\"edit-link button button-small button-secondary\\" target=\\"_blank\\" rel=\\"noreferrer\\">
                  Edit this page
                </a>
              </li>
            </ul>
          </div>
          <div class=\\"unchosen\\">
            <button type=\\"button\\" class=\\"button action-choose button-small button-secondary\\">
              Choose a page
            </button>
          </div>
        </div>
        <input type=\\"hidden\\" name=\\"the-name\\" id=\\"the-id\\" value=\\"34\\">"
`;

exports[`telepath: wagtail.widgets.PageChooser setState() to null clears the fields 1`] = `
"<div id=\\"the-id-chooser\\" class=\\"chooser page-chooser blank\\" data-chooser-url=\\"/admin/choose-page/\\">
          <div class=\\"chosen\\">
            <span class=\\"title\\">Welcome to the Wagtail Bakery!</span>
            <ul class=\\"actions\\">
              <li>
                <button type=\\"button\\" class=\\"button action-choose button-small button-secondary\\">
                  Choose another page
                </button>
              </li>
              <li>
                <a href=\\"/admin/pages/60/edit/\\" class=\\"edit-link button button-small button-secondary\\" target=\\"_blank\\" rel=\\"noreferrer\\">
                  Edit this page
                </a>
              </li>
            </ul>
          </div>
          <div class=\\"unchosen\\">
            <button type=\\"button\\" class=\\"button action-choose button-small button-secondary\\">
              Choose a page
            </button>
          </div>
        </div>
        <input type=\\"hidden\\" name=\\"the-name\\" id=\\"the-id\\" value=\\"\\">"
`;

exports[`telepath: wagtail.widgets.RadioSelect it renders correctly 1`] = `
"<ul id=\\"the-id\\">
          <li>
            <label for=\\"the-id_0\\">
            <input type=\\"radio\\" name=\\"the-name\\" value=\\"tea\\" id=\\"the-id_0\\"> Tea</label>
          </li>
          <li>
            <label for=\\"the-id_1\\">
            <input type=\\"radio\\" name=\\"the-name\\" value=\\"coffee\\" id=\\"the-id_1\\"> Coffee</label>
          </li>
        </ul>"
`;

exports[`telepath: wagtail.widgets.Select it renders correctly 1`] = `
"<select name=\\"the-name\\" id=\\"the-id\\">
          <option value=\\"1\\">Option 1</option>
          <option value=\\"2\\">Option 2</option>
        </select>"
`;
